[package]
name = "just-pars-urlprodect"
version = "0.1.3"
authors = ["matvei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "cookies", "gzip"] }
clap = {version = "3.0.0-beta.1", features = ["wrap_help"] }
scraper = "*"
toml = "0.5.6"
serde = "1.0"
serde_json = "1.0"